src/test/ui/parser/variadic-ffi-semantic-restrictions.stderr
error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:6:19
   |
LL | fn f1_1(x: isize, ...) {}
   |                   ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:9:9
   |
LL | fn f1_2(...) {}
   |         ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:9:9
   |
LL | fn f1_2(...) {}
   |         ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:13:30
   |
LL | extern "C" fn f2_1(x: isize, ...) {}
   |                              ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:16:20
   |
LL | extern "C" fn f2_2(...) {}
   |                    ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:16:20
   |
LL | extern "C" fn f2_2(...) {}
   |                    ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:20:20
   |
LL | extern "C" fn f2_3(..., x: isize) {}
   |                    ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:20:20
   |
LL | extern "C" fn f2_3(..., x: isize) {}
   |                    ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:24:30
   |
LL | extern "C" fn f3_1(x: isize, ...) {}
   |                              ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:27:20
   |
LL | extern "C" fn f3_2(...) {}
   |                    ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:27:20
   |
LL | extern "C" fn f3_2(...) {}
   |                    ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:31:20
   |
LL | extern "C" fn f3_3(..., x: isize) {}
   |                    ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:31:20
   |
LL | extern "C" fn f3_3(..., x: isize) {}
   |                    ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:36:13
   |
LL |     fn e_f1(...);
   |             ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:38:13
   |
LL |     fn e_f2(..., x: isize);
   |             ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:45:23
   |
LL |     fn i_f1(x: isize, ...) {}
   |                       ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:47:13
   |
LL |     fn i_f2(...) {}
   |             ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:47:13
   |
LL |     fn i_f2(...) {}
   |             ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:50:13
   |
LL |     fn i_f3(..., x: isize, ...) {}
   |             ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:50:13
   |
LL |     fn i_f3(..., x: isize, ...) {}
   |             ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:50:28
   |
LL |     fn i_f3(..., x: isize, ...) {}
   |                            ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:54:13
   |
LL |     fn i_f4(..., x: isize, ...) {}
   |             ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:54:13
   |
LL |     fn i_f4(..., x: isize, ...) {}
   |             ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:54:28
   |
LL |     fn i_f4(..., x: isize, ...) {}
   |                            ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:61:23
   |
LL |     fn t_f1(x: isize, ...) {}
   |                       ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:63:23
   |
LL |     fn t_f2(x: isize, ...);
   |                       ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:65:13
   |
LL |     fn t_f3(...) {}
   |             ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:65:13
   |
LL |     fn t_f3(...) {}
   |             ^^^

error: C-variadic function must be declared with at least one named argument
  --> $DIR/variadic-ffi-semantic-restrictions.rs:68:13
   |
LL |     fn t_f4(...);
   |             ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:68:13
   |
LL |     fn t_f4(...);
   |             ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:71:13
   |
LL |     fn t_f5(..., x: isize) {}
   |             ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:71:13
   |
LL |     fn t_f5(..., x: isize) {}
   |             ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:74:13
   |
LL |     fn t_f6(..., x: isize);
   |             ^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:74:13
   |
LL |     fn t_f6(..., x: isize);
   |             ^^^

error: aborting due to 34 previous errors

